bims/static/css/detailed_dashboard.css
#detailed-taxa-dashboard, #detailed-site-dashboard, .loading-dashboard {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow-y: auto;
    z-index: 10000;
    background: white;
}

#detailed-site-dashboard-wrapper {
    padding: 3rem;
}

.detailed-dashboard-title {
    padding-left: 15px;
    font-size: 15pt;
    font-weight: bold;
}

.loading-dashboard {
    text-align: center;
    border: 0;
    z-index: 9;
}

.loading-dashboard img {
    top: 40%;
    left: 50%;
    transform: translate(-50%, -60%);
    position: absolute;
}

.loading-dashboard-subtitle {
    font-size: 12pt;
    color: grey;
    top: 60%;
    left: 50%;
    transform: translate(-50%, -60%);
    position: absolute;
}

.dashboard-wrapper {
    width: 100%;
    margin: 15px;
}

.dashboard-table table {
    width: 100%;
}

/*.dashboard-table table,*/
/*.dashboard-table tr, .dashboard-table td,*/
/*.dashboard-table th {*/
    /*border: 1px solid black;*/
/*}*/

.dashboard-table td, .dashboard-table th {
    padding: 2px 5px;
}

.btn-dashboard {
    border-radius: 0;
    position: fixed;
    top: 3px;
    right: 10px;
    z-index: 99999;
}

.btn-element-download {
    border-radius: 0;
    border: 2px solid black !important;
}

.btn-element-download:hover, .btn-dashboard:hover {
    color: #18A090 !important;
    background-color: white !important;
}

.chart-wrapper, #taxa-records-timeline-graph {
    background: white !important;
}

.occurence-table, .records-table, .records-area-table {
    max-height: 300px;
    overflow-y: auto;
}

.dd-title {
    font-size: 13pt;
    padding-top: 5px;
    text-transform: uppercase;
    font-weight: bold;
}

.dd-sub-title {
    margin-top: 20px;
    padding-left: 15px;
    font-weight: bold;
}

.dd-status-item {
    padding: 5px;
    border: 1px solid black;
}

.dd-status-list {
    padding-left: 15px;
}

.open-detailed-button-container {
    width: 100%;
    text-align: center;
}

#open-detailed-view {
    font-size: 10pt;
    text-transform: none;
    width: -webkit-fill-available;
}

.download-as-csv, .download-chem-csv {
    text-transform: none;
    font-size: 10pt;
}

.card-header-title {
    padding-top: 8px;
    height: 30px;
}

.chart-label {
    color: #787878 !important;
}

.no-padding {
    padding: 0;
}

.full-width {
    width: 100%;
}

.detailed-table-chart {
    width: 100%;
    text-align: center;
    min-height: 100px;
}

.dashboard-wrapper .card {
    margin-top: 0.5rem;
}


#fsdd-overview .col-12.sub-title {
    padding: 0.25rem;
    border: 1px solid #d3d4d1;
    font-size: 12px;
    font-weight: 700;
}

#fsdd-overview .title_column {
     font-weight: 700;
}

#fsdd-overview  .col-4 {
    padding: 0.25rem;
    border: 1px solid #d3d4d1;
    padding-left: 0.5rem;
    font-size: 12px;
}

#fsdd-overview  .col-8 {
    padding: 0.25rem;
    border: 1px solid #d3d4d1;
    padding-left: 0.5rem;
    font-size: 12px;
}

#species-ssdd-occurrence-data .col-6.sub-title {
    padding: 0.25rem;
    border: 1px solid #d3d4d1;
    font-size: 12px;
    font-weight: 700;
}

#species-ssdd-occurrence-data .title-column {
     font-weight: 700;
    overflow-x: hidden;
}

#species-ssdd-occurrence-data .col-4 {
    padding: 0.25rem;
    border: 1px solid #d3d4d1;
    padding-left: 0.5rem;
    font-size: 12px;
    color: #4a4a4a;
}

#species-ssdd-occurrence-data .col-2 {
    padding: 0.25rem;
    border: 1px solid #d3d4d1;
    padding-left: 0.5rem;
    font-size: 12px;
    color: #4a4a4a;
    overflow-x: hidden;
}

.center-self {
    align-self: center;
    height: 100%;
    align-items: center;
    display: inline-flex;
    overflow-x:auto;

}

.center-self::-webkit-scrollbar {
    display: none;
}

.center-self::-webkit-scrollbar {
   height: 0;
}

.ssdd-titles {
    text-align: center;
    font-size: 12px;
    padding: 0.5rem;
}

.species-ssdd-legends {
    font-style: italic;
    font-size: 9px;
    letter-spacing: 0.2px;
    color: #4a4a4a;
    padding-bottom: 0.5rem;
}

.species-ssdd-legends .col-3 {
    padding-left:9%;
}

.dashboard-wrapper .card {
    margin-top: 0.5rem;
}

.dashboard-wrapper .card .card-header   {
    padding: 0.25rem;
    padding-left: 1rem;
    line-height: 1.25rem;
}

.dashboard-wrapper .card .card-header-title {
    height: auto;
}

.dashboard-wrapper .card {
    margin-top: 0.5rem;
}

.records-area-table .col-4.sub-title {
    padding: 0.25rem;
    border: 1px solid #d3d4d1;
    font-size: 12px;
    font-weight: 700;
}

.records-area-table .title_column {
     font-weight: 700;
}

.records-area-table  .col-4 {
    padding: 0.25rem;
    border: 1px solid #d3d4d1;
    padding-left: 0.5rem;
    font-size: 12px;
}

.records-area-table  .col-4 {
    padding: 0.25rem;
    border: 1px solid #d3d4d1;
    padding-left: 0.5rem;
    font-size: 12px;
}

table#filter-history-table {
    width: 100%;
}

#filter-history-table tr {
    border-bottom: 1px solid #ccc;
}

.common-name-title {
    font-weight: normal !important;
    font-size: 14pt;
}

.site-detailed-table thead {
    font-size: 8pt;
}

.site-detailed-table tbody {
    font-size: 8pt;
}

.dashboard-header {
    margin-top: 20px;
    margin-left: 30px;
    margin-right: 30px;
    border-bottom: 3px solid #18A090;
}

#metadata-table-list, .custom-table {
    font-size: 11pt;
    line-height: 25px;
    width: 100%;
    table-layout: fixed;
}

.custom-table thead {
    background-color: lightgrey;
}

.custom-table thead th {
    border-bottom: 2px solid black !important;
}

.custom-table tbody {
    border-bottom: 1px solid black;
}

.custom-table td, .custom-table th {
    border-top: 1px solid black !important;
}

.chem-bar-chart {
    margin-bottom: 25px
}

.col-chart {
    padding-left: 5px !important;
    padding-right: 5px !important;
}

.card-100 {
    height: 100%;
}

.card-body {
    overflow-y: auto;
}

